--- a/app/src/main/res/drawable/onboarding_indicator_active_two.xml
+++ b/app/src/main/res/drawable/onboarding_indicator_active_two.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:width="12dp"
-        android:height="8dp"/>
+    <size android:width="@dimen/_12sdp"
+        android:height="@dimen/_8sdp"/>
     <corners android:radius="25dp"/>
     <solid android:color="@color/indicatioractive"/>
 
