--- a/app/src/main/res/layout/item_conatiner_boarding_one.xml
+++ b/app/src/main/res/layout/item_conatiner_boarding_one.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/linear_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="50dp"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/_250sdp"
-        android:layout_height="@dimen/_250sdp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name"/>
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textAllCaps="false"
-        android:fontFamily="@font/lovina_october_five_regular"
-        android:textSize="@dimen/_20ssp"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/text_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:fontFamily="@font/sf_pro_rounded_regular"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_17ssp"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/image"-->
+<!--        android:layout_width="@dimen/_250sdp"-->
+<!--        android:layout_height="@dimen/_250sdp"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        android:contentDescription="@string/app_name"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/text_title"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:fontFamily="@font/lovina_october_five_regular"-->
+<!--        android:textSize="@dimen/_20ssp"-->
+<!--        android:textStyle="bold"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/text_description"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center"-->
+<!--        android:fontFamily="@font/sf_pro_rounded_regular"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="@dimen/_17ssp"/>-->
 </LinearLayout>
