Registration Form - UI complete

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="indicatiorInactive">#FDC9B3</color>
     <color name="indicatioractive">#AB3B61</color>
     <color name="textTitle">#123D6A</color>
+    <color name="textSubTitle">#404040</color>
+    <color name="textTertiary">#686666</color>
     <color name="indicatiorInactive2">#EEEEEE</color>
 </resources>
