--- a/app/src/main/res/layout/fragment_gender_input.xml
+++ b/app/src/main/res/layout/fragment_gender_input.xml
@@ -3,14 +3,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/login_background"
     tools:context=".views.registration.GenderInputFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Height"
-        android:textSize="@dimen/_30ssp"
-        android:layout_gravity="center"/>
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Who do you identify as?"
+            android:textSize="@dimen/_35ssp"
+            android:textColor="@color/textTitle"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_25sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/button_female"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Female"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_20ssp"
+                android:padding="@dimen/_5sdp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/button_male"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Male"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_20ssp"
+                android:padding="@dimen/_5sdp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/button_other"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="60dp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Other"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_20ssp"
+                android:padding="@dimen/_5sdp" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </FrameLayout>
