--- a/app/src/main/res/layout/fragment_height_input.xml
+++ b/app/src/main/res/layout/fragment_height_input.xml
@@ -3,14 +3,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/login_background"
     tools:context=".views.registration.HeightInputFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Height"
-        android:textSize="@dimen/_30ssp"
-        android:layout_gravity="center"/>
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="What is your height?"
+            android:textSize="@dimen/_35ssp"
+            android:textColor="@color/textTitle"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_25sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:cardCornerRadius="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_5sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:gravity="center">
+                <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/number_picker_feet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:np_width="64dp"
+                    app:np_height="180dp"
+                    app:np_dividerColor="@color/indicatioractive"
+                    app:np_max="8"
+                    app:np_min="3"
+                    app:np_selectedTextColor="@color/indicatioractive"
+                    app:np_selectedTextSize="@dimen/_25ssp"
+                    app:np_textColor="@color/textTertiary"
+                    app:np_textSize="@dimen/_15ssp"
+                    app:np_value="5"
+                    app:np_formatter="@string/ft"
+                    app:np_fadingEdgeEnabled="false"
+                    android:layout_marginEnd="@dimen/_30sdp"/>
+                <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/number_picker_inch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:np_width="64dp"
+                    app:np_height="180dp"
+                    app:np_dividerColor="@color/indicatioractive"
+                    app:np_max="11"
+                    app:np_min="0"
+                    app:np_selectedTextColor="@color/indicatioractive"
+                    app:np_selectedTextSize="@dimen/_25ssp"
+                    app:np_textColor="@color/textTertiary"
+                    app:np_textSize="@dimen/_15ssp"
+                    app:np_value="3"
+                    app:np_fadingEdgeEnabled="false"
+                    app:np_formatter="@string/inch"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </FrameLayout>
