--- a/app/src/main/res/layout/fragment_location_input.xml
+++ b/app/src/main/res/layout/fragment_location_input.xml
@@ -3,14 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/login_background"
     tools:context=".views.registration.LocationInputFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Location"
-        android:textSize="@dimen/_30ssp"
-        android:layout_gravity="center"/>
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Where do you live?"
+            android:textSize="@dimen/_35ssp"
+            android:textColor="@color/textTitle"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_25sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Enter location"
+            android:textStyle="bold"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/textSubTitle"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/_50sdp"
+            android:layout_marginBottom="@dimen/_10sdp">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="San Francisco, CA"
+                android:textSize="@dimen/_20ssp"
+                android:padding="@dimen/_10sdp"
+                android:background="@null"
+                android:drawableStart="@drawable/ic_location_24"
+                android:drawablePadding="@dimen/_5sdp"/>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </FrameLayout>
