--- a/app/src/main/res/layout/fragment_religion_input.xml
+++ b/app/src/main/res/layout/fragment_religion_input.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_background"
     tools:context=".views.registration.ReligionInputFragment">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Religion"
-        android:textSize="@dimen/_30ssp"
-        android:layout_gravity="center"/>
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="What is your religion?"
+            android:textSize="@dimen/_35ssp"
+            android:textColor="@color/textTitle"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_25sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+        <include
+            layout="@layout/layout_recyclerview"
+            android:id="@+id/recyclerview" />
+    </LinearLayout>
 </FrameLayout>
