--- a/app/src/main/res/layout/fragment_gender_preference_input.xml
+++ b/app/src/main/res/layout/fragment_gender_preference_input.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/login_background"
-    tools:context=".views.registration.GenderInputFragment">
+    android:background="@color/white"
+    tools:context=".views.registration.GenderPreferenceInputFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Who do you identify as?"
+            android:text="Who do you want to date?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
@@ -41,7 +41,8 @@
                 android:textAlignment="center"
                 android:textSize="@dimen/_15ssp"
                 android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp"/>
+                android:paddingBottom="@dimen/_10sdp"
+                />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:id="@+id/button_male"
@@ -63,6 +64,26 @@
                 android:paddingBottom="@dimen/_10sdp" />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
+            android:id="@+id/button_both"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_40sdp"
+            android:layout_marginEnd="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Both"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_15ssp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
             android:id="@+id/button_other"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,7 +100,7 @@
                 android:textAlignment="center"
                 android:textSize="@dimen/_15ssp"
                 android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp" />
+                android:paddingBottom="@dimen/_10sdp"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
