--- a/app/src/main/res/layout/fragment_location_input.xml
+++ b/app/src/main/res/layout/fragment_location_input.xml
@@ -42,8 +42,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="San Francisco, CA"
-                android:textSize="@dimen/_20ssp"
-                android:padding="@dimen/_10sdp"
+                android:textSize="@dimen/_15ssp"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:paddingStart="@dimen/_10sdp"
                 android:background="@null"
                 android:drawableStart="@drawable/ic_location_24"
                 android:drawablePadding="@dimen/_5sdp"/>
