--- a/app/src/main/res/layout/fragment_vaccine_input.xml
+++ b/app/src/main/res/layout/fragment_vaccine_input.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/login_background"
-    tools:context=".views.registration.ProfessionInputFragment">
+    android:background="@color/white"
+    tools:context=".views.registration.VaccineInputFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,37 +17,51 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="I’m a/an..."
+            android:text="Do you have Covid-19 vaccine?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginBottom="@dimen/_25sdp"
             android:fontFamily="@font/sf_pro_rounded_regular" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Occupation"
-            android:textStyle="bold"
-            android:textSize="@dimen/_15ssp"
-            android:textColor="@color/textSubTitle"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:fontFamily="@font/sf_pro_rounded_regular" />
         <androidx.cardview.widget.CardView
+            android:id="@+id/button_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_50sdp"
-            android:layout_marginBottom="@dimen/_10sdp">
-            <EditText
+            android:layout_marginStart="@dimen/_40sdp"
+            android:layout_marginEnd="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Software Engineer"
-                android:textSize="@dimen/_15ssp"
+                android:text="Yes"
                 android:fontFamily="@font/sf_pro_rounded_regular"
-                android:paddingStart="@dimen/_20sdp"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_15ssp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/button_no"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_40sdp"
+            android:layout_marginEnd="@dimen/_40sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:cardCornerRadius="@dimen/_50sdp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="No"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textAlignment="center"
+                android:textSize="@dimen/_15ssp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
-                android:background="@null"/>
+                />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
