--- a/app/src/main/res/layout/row_input_registration.xml
+++ b/app/src/main/res/layout/row_input_registration.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/_5sdp"
+    android:layout_marginEnd="@dimen/_5sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -17,10 +19,10 @@
             android:textSize="@dimen/_15ssp"
             android:textColor="@color/indicatioractive"
             android:fontFamily="@font/sf_pro_rounded_medium"
-            android:paddingStart="@dimen/_40sdp"
-            android:paddingEnd="@dimen/_40sdp"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp"
             android:layout_gravity="center"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
