--- a/app/src/main/res/layout/fragment_phone_input.xml
+++ b/app/src/main/res/layout/fragment_phone_input.xml
@@ -39,6 +39,7 @@
             app:cardCornerRadius="@dimen/_50sdp"
             android:layout_marginBottom="@dimen/_10sdp">
             <EditText
+                android:id="@+id/text_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="000-000-0000"
