--- a/app/src/main/res/layout/fragment_gender_preference_input.xml
+++ b/app/src/main/res/layout/fragment_gender_preference_input.xml
@@ -33,6 +33,7 @@
             android:layout_marginBottom="@dimen/_20sdp"
             app:cardCornerRadius="@dimen/_50sdp">
             <TextView
+                android:id="@+id/text_female"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Female"
@@ -53,6 +54,7 @@
             android:layout_marginBottom="@dimen/_20sdp"
             app:cardCornerRadius="@dimen/_50sdp">
             <TextView
+                android:id="@+id/text_male"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Male"
@@ -72,6 +74,7 @@
             android:layout_marginBottom="60dp"
             app:cardCornerRadius="@dimen/_50sdp">
             <TextView
+                android:id="@+id/text_open_to_all"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Open to all"
