Profile model changed

--- a/app/src/main/res/layout/fragment_vaccine_input.xml
+++ b/app/src/main/res/layout/fragment_vaccine_input.xml
@@ -31,8 +31,11 @@
             android:layout_marginStart="@dimen/_40sdp"
             android:layout_marginEnd="@dimen/_40sdp"
             android:layout_marginBottom="@dimen/_20sdp"
-            app:cardCornerRadius="@dimen/_50sdp">
+            app:cardCornerRadius="@dimen/_50sdp"
+            android:clickable="true"
+            android:focusable="true">
             <TextView
+                android:id="@+id/text_yes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Yes"
@@ -50,8 +53,11 @@
             android:layout_marginStart="@dimen/_40sdp"
             android:layout_marginEnd="@dimen/_40sdp"
             android:layout_marginBottom="@dimen/_20sdp"
-            app:cardCornerRadius="@dimen/_50sdp">
+            app:cardCornerRadius="@dimen/_50sdp"
+            android:clickable="true"
+            android:focusable="true">
             <TextView
+                android:id="@+id/text_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="No"
