--- a/app/src/main/res/layout/fragment_gender_input.xml
+++ b/app/src/main/res/layout/fragment_gender_input.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/login_background"
-    tools:context=".views.registration.GenderInputFragment">
+    tools:context=".views.registration.SexInputFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
