--- a/app/src/main/res/layout/fragment_dob_input.xml
+++ b/app/src/main/res/layout/fragment_dob_input.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_10sdp"
-                android:gravity="center">
+                android:gravity="center"
+                android:background="@color/white">
                 <com.shawnlin.numberpicker.NumberPicker
                     android:id="@+id/number_picker_month"
                     android:layout_width="wrap_content"
